# FastAPI

./: .env-example  Makefile  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: Makefile  app_factory.py  main.py  settings.py
backend/app/apps/core/: base_models.py
backend/app/apps/info/: router.py
backend/app/apps/users/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_02_15_1947-4b939d3da77d_add_user.py
documentation/: mkdocs.yml
documentation/docs/: examples.md  index.md
nginx/: nginx.conf
