[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Russkikh",email = "ebriuspythagoras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "python-multipart>=0.0.22,<0.0.23",
    "pydantic-settings>=2.12.0,<3.0.0",
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "black>=26.1.0,<27.0.0",
    "isort>=7.0.0,<8.0.0",
]
